<resources>
    <string name="app_name">GMC_P3</string>
    <string name="device_number">شماره دستگاه</string>
    <string name="off">خاموش</string>
    <string name="on">روشن</string>
    <string name="active_timer">تایمر</string>
    <string name="manual_timer">دستی</string>
    <string name="on_time">زمان روشن(دقیقه)</string>
    <string name="off_time">زمان خاموش(دقیقه)</string>
    <string name="off_by_timer">خاموش با تایمر</string>
    <string name="delay_connect">تاخیر وصل(ثانیه)</string>
    <string name="delay_disconnect">تاخیر قطع(ثانیه)</string>
    <string name="max_ampher">حداکثر جریان(آمپر)</string>
    <string name="min_ampher">حداقل جریان(آمپر)</string>
    <string name="ontime_ampher">جریان لحظه ای(آمپر)</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="report">گزارش</string>
    <string name="send">ارسال</string>
    <string name="fill_all_fields">لطفا همه فیلدها رو تکمیل کنید</string>
    <string name="not_valid_phone_number">شماره موبایل نامعتبر است</string>
    <string name="low_from_240">باید کمتر از 240 باشد</string>
    <string name="low_from_15">باید کمتر از 15 باشد</string>
    <string name="are_you_sure">آیا مطمئن هستید؟</string>
    <string name="are_you_send_config">تنظیمات ارسال گردد؟</string>
    <string name="are_you_save_config">تنظیمات ذخیره گردد؟</string>
    <string name="yes_send">بله و ارسال …</string>
    <string name="no">خیر</string>
    <string name="sending">در حال ارسال …</string>
    <string name="status">وضعیت:</string>
    <string name="on_by_timer">روشن با تایمر</string>
    <string name="manual_by_timer">روشن دستی</string>
    <string name="over_amp">جریان زیاد</string>
    <string name="under_amp">جریان کم</string>
    <string name="digital_disconnect">ورودی دیجیتال قطع</string>
    <string name="reset_app">لطفا دوباره وارد برنامه شوید</string>
    <string name="operator_number">شماره اپراتور</string>
    <string name="new_sms">پیام جدید از دستگاه</string>
    <string name="operator_name">نام اپراتور</string>
    <string name="operaor_phone_number">شماره تلفن</string>
    <string name="confirm">تائید</string>
    <string name="cancel">لغو</string>
    <string name="device_names">نام دستگاه ها</string>
    <string name="device_name">نام دستگاه</string>
    <string name="select_1_device">یک دستگاه انتخاب کنید</string>
    <string-array name="device_status">
        <item>تایمر(اتوماتیک)</item>
        <item>خاموش</item>
        <item>روشن دستی</item>
    </string-array>
</resources>