<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#E16A6A6A"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layoutDirection="rtl"
        android:layout_gravity="center"
        android:background="#AE636363"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:text="@string/operator_number"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layoutDirection="rtl"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:weightSum="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:layout_margin="3dp"
                android:textSize="20sp"
                android:hint="@string/operator_name"
                android:id="@+id/operator_name_1"
                android:inputType="text"
                android:background="@drawable/border_edittext_normal"
                android:textColor="@color/black"
                android:padding="3dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_margin="3dp"
                android:layout_height="60sp"
                android:textSize="20sp"
                android:id="@+id/operator_tel_1"
                android:hint="@string/operaor_phone_number"
                android:inputType="number"
                android:background="@drawable/border_edittext_normal"
                android:textColor="@color/black"
                android:padding="3dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layoutDirection="rtl"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:weightSum="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:layout_margin="3dp"
                android:textSize="20sp"
                android:id="@+id/operator_name_2"
                android:hint="@string/operator_name"
                android:inputType="text"
                android:background="@drawable/border_edittext_normal"
                android:textColor="@color/black"
                android:padding="3dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_margin="3dp"
                android:layout_height="60sp"
                android:textSize="20sp"
                android:id="@+id/operator_tel_2"
                android:hint="@string/operaor_phone_number"
                android:inputType="number"
                android:background="@drawable/border_edittext_normal"
                android:textColor="@color/black"
                android:padding="3dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layoutDirection="rtl"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:weightSum="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:layout_margin="3dp"
                android:textSize="20sp"
                android:id="@+id/operator_name_3"
                android:hint="@string/operator_name"
                android:inputType="text"
                android:background="@drawable/border_edittext_normal"
                android:textColor="@color/black"
                android:padding="3dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_margin="3dp"
                android:layout_height="60sp"
                android:textSize="20sp"
                android:hint="@string/operaor_phone_number"
                android:inputType="number"
                android:id="@+id/operator_tel_3"
                android:background="@drawable/border_edittext_normal"
                android:textColor="@color/black"
                android:padding="3dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layoutDirection="rtl"
        android:layout_gravity="center"
        android:background="#AE636363"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_margin="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green"
            android:text="@string/confirm"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_margin="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_red"
            android:text="@string/cancel"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
